# ChangeLog for app-emacs/doxymacs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/50doxymacs-gentoo.el, +doxymacs-1.7.0.ebuild,
  +doxymacs-1.8.0.ebuild, +metadata.xml:
  initial commit for bug 110083; massaged ebuild a lot, based on work of
  Ciprian Ciubotariu <cheepeero@gmx.net> and Christian Schlotter
  <again@gmx.de>

  13 Mar 2007; Christian Schlotter (schlotter) <again@gmx.de>
  doxymacs-1.7.0.ebuild:
  Remove dependency on app-emacs/w3, as it was removed from the tree. Thanks
  to Santiago M. Mola Velasco in bug #110083.

  13 Jan 2007; Jakub Moc <jakub@gentoo.org> doxymacs-1.7.0.ebuild:
  No need to dodoc COPYING and INSTALL

  13 Jan 2007; Christian Schlotter (schlotter) <again@gmx.de>
  +files/50doxymacs-gentoo.el, +doxymacs-1.7.0.ebuild, +metadata.xml:
  new ebuild for bug 110083
